# BF2MC-Matchmaker

./: .gitignore  CMakeLists.txt  Doxyfile.in  Readme.md  make_release_build.sh
apache2/: readme.md
apache2/sites-available/: backend.bf2mc.com.conf  backend.bfmcspy.net.conf  bf2mc.com.conf  bfmc.bfmcspy.net.conf  bfmc.gamespy.com.conf  doc.bf2mc.com.conf  easports.com.conf  fragalyzer.bf2mc.com.conf
data/: news.txt  settings.example.json  settings.json
data/advert/: advert.us.sux  advert.us.txt
data/clan/claninfo/: clanid=543151.txt
data/clan/clanmembers/: clanid=561717.txt
data/examples/clan/clanmembers/: clanid=561717.txt
data/examples/getplayerinfo/: pid=75559074&getarg=score,rank,pph,kills,suicides,time,lavd,mavd,havd,hed,pld,bod,k1,s1,k2,s2,k3,s3,k4,s4,k5,s5,tk,medals,ttb,mv,ngp.txt
data/examples/stats/: sort=kills&pos=1&posafter=9.txt  sort=pph&pos=1&posafter=9.txt  sort=ratio&pos=1&posafter=9.txt  sort=score&pos=1&posafter=9.txt  sort=vehicles&pos=1&posafter=9.txt
data/gamescripts/bfmc/ps2/Ads/: advert.de.sux  advert.de.txt  advert.en.sux  advert.es.sux  advert.es.txt  advert.fr.sux  advert.fr.txt  advert.gb.sux  advert.gb.txt  advert.it.sux  advert.it.txt  advert.jp.sux  advert.jp.txt  advert.nl.sux  advert.nl.txt  advert.roa.sux  advert.roa.txt  advert.sv.sux  advert.sv.txt  advert.uk.sux  advert.us.sux  advert.us.txt
data/gamescripts/bfmc/ps2/Ea/: Ea.de  Ea.en  Ea.es  Ea.fr  Ea.it  Ea.jp  Ea.nl  Ea.roa  Ea.sv  Ea.uk  Ea.us
data/gamescripts/bfmc/ps2/GameSpy/: gs.de  gs.en  gs.es  gs.fr  gs.gb  gs.it  gs.jp  gs.nl  gs.roa  gs.sv  gs.uk
data/gamescripts/bfmc/ps2/Locale/: LocaleIds.txt  brittish.pus  dutch.pus  english.pus  french.pus  german.pus  italian.pus  japanese.pus  language.hdt  spanish.pus  swedish.pus
data/gamescripts/bfmc/ps2/PunkBuster/: pb.de  pb.en  pb.es  pb.fr  pb.it  pb.jp  pb.nl  pb.roa  pb.sv  pb.uk  pb.us
data/gamescripts/bfmc/ps2/Settings/: ClanMatchOptions.txt  GameModes.txt  PlayLists.txt  QuickMatchOptions.txt
data/gamescripts/bfmc/ps2/en/: PS2News_fr_FR.txt  PS2News_it_IT.txt  PS2News_jp.txt  PS2news_de_DE.txt  PS2news_en_GB.txt  PS2news_en_US.txt  PS2news_es_ES.txt  PS2news_fr_FR.txt  PS2news_it_IT.txt  PS2news_jp.txt  PS2news_nl.txt  PS2news_sv.txt
data/leaderboard/: startrank=1&endrank=7.txt
data/meme/: index.html
data/protocol/: browsing_REQUEST_SERVER_INFO.pcapng  gpcm.txt  gui_bug.pcapng
data/protocol/bug/: english.pus
data/stats/: sort=pph&pos=1&posafter=9.txt  sort=rank&pos=1&posafter=9.txt
database/: BF2MC_Chat.sql  BF2MC_ClanRanks.sql  BF2MC_Clans.sql  BF2MC_GameServer.sql  BF2MC_GameServerPlayers.sql  BF2MC_GameServers.sql  BF2MC_GameStatPlayer.sql  BF2MC_GameStatPlayers.sql  BF2MC_GameStats.sql  BF2MC_Leaderboard_bod.sql  BF2MC_Leaderboard_clan.sql  BF2MC_Leaderboard_havd.sql  BF2MC_Leaderboard_hed.sql  BF2MC_Leaderboard_k1.sql  BF2MC_Leaderboard_k2.sql  BF2MC_Leaderboard_k3.sql  BF2MC_Leaderboard_k4.sql  BF2MC_Leaderboard_k5.sql  BF2MC_Leaderboard_kills.sql  BF2MC_Leaderboard_kills_deaths.sql  BF2MC_Leaderboard_lavd.sql  BF2MC_Leaderboard_mavd.sql  BF2MC_Leaderboard_pph.sql  BF2MC_Leaderboard_rank.sql  BF2MC_Leaderboard_ratio_k1_s1.sql  BF2MC_Leaderboard_ratio_k2_s2.sql  BF2MC_Leaderboard_ratio_k3_s3.sql  BF2MC_Leaderboard_ratio_k4_s4.sql  BF2MC_Leaderboard_ratio_k5_s5.sql  BF2MC_Leaderboard_ratio_kills_deaths.sql  BF2MC_Leaderboard_score.sql  BF2MC_Leaderboard_vehicles.sql  BF2MC_PlayerFriends.sql  BF2MC_PlayerStats.sql  BF2MC_Players.sql  BF2MC_Users.sql  BF2MC_UsersFriends.sql  BF2MC_routines.sql  Readme.md
dns/: Readme.md  db.bfmcspy.net.conf  db.dnas.playstation.org.conf  db.easports.com.conf  db.evenbalance.com.conf  db.gamespy.com.conf  named.conf.local
service/: Readme.md  bf2mc.service
src/: battlefield.cpp  battlefield.h  database.cpp  database.h  gamespy.cpp  gamespy.h  globals.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h  service.h  settings.h  urlrequest.cpp  urlrequest.h  util.cpp  util.h  version.h.in
src/battlefield/: clan.cpp  clan.h  gameserver.cpp  gameserver.h  gamestat.cpp  gamestat.h  player.cpp  player.h  playerstats.cpp  playerstats.h
src/browsing/: client.cpp  client.h  constants.h  sb_crypt.cpp  sb_crypt.h  test.cpp
src/database/: chat.cpp  clan.cpp  clan_rank.cpp  game_server.cpp  game_server_player.cpp  game_stat.cpp  game_stat_player.cpp  leaderboard_clan.cpp  leaderboard_rank.cpp  leaderboard_ratio.cpp  leaderboard_type.cpp  player.cpp  player_friend.cpp  player_stat.cpp
src/dns/: client.cpp  client.h
src/easports/: client.cpp  client.h
src/gamestats/: client.cpp  client.h  test.cpp
src/gpcm/: client.cpp  client.h
src/gpsp/: client.cpp  client.h
src/include/: atomizes.hpp
src/net/: socket.cpp  socket.h
src/qr/: client.cpp  client.h  constants.h
src/service/: file_system.cpp  file_system.h
src/webserver/: api.cpp  client.cpp  client.h
src/webserver/request/: api.cpp  api_admin.cpp  clan.cpp  status.cpp
src/websocket/: client.cpp  client.h
test/: main  main.cpp  main.py  webclient.py
test/BF2MC-GameServer/: ServerStats.py
test/GPCM/: main.py
test/QR/: heartbeat.py  status.py
tools/chatgpt/: if-else string optimalisation.txt
